[package]
name = "frob-adventure"
version = "0.1.0"
edition = "2021"

description = "A hobby retro-style TUI game."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cod = { version = "6.1", features = ["input"] }
dirs = "5.0.1"
map-macro = "0.2.6"
rand = "0.8"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
zstd = "0.13.0"
